--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body {
+    background-color: rgb(108, 44, 44);
     background: url('img/fundo.jpg') no-repeat center center fixed;
     background-size: cover;
+    font-family: 'Roboto';
 }
 
 body::before {
@@ -23,4 +25,16 @@ body::before {
 
 .container {
     max-width: 1200px;
+}
+
+nav a{
+    font-weight: 700;
+}
+
+nav ion-icon{
+    font-size: 24px;
+}
+
+section img{
+    border-radius: 12px;
 }
